--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "map",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/all.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify -v -d -t [ reactify --es6 ] app.jsx -o compiled.js",
@@ -19,8 +19,15 @@
   },
   "homepage": "https://github.com/sont85/map#readme",
   "dependencies": {
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.1",
     "moment": "^2.10.6",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-dom": "^0.14.0-rc1"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
